[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/FuturaBold.tres" type="DynamicFont" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="IndiciesContainer" type="VBoxContainer" parent="CanvasLayer/UIContainer"]
margin_right = 232.0
margin_bottom = 66.0
alignment = 1

[node name="IndiciesLabel" type="Label" parent="CanvasLayer/UIContainer/IndiciesContainer"]
margin_right = 232.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Number of Indicies"
align = 1

[node name="IndiciesSliderContainer" type="HBoxContainer" parent="CanvasLayer/UIContainer/IndiciesContainer"]
margin_top = 26.0
margin_right = 232.0
margin_bottom = 66.0

[node name="IndexSlider" type="HSlider" parent="CanvasLayer/UIContainer/IndiciesContainer/IndiciesSliderContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
hint_tooltip = "Set the number of indicies in your array"
min_value = 1.0
max_value = 50.0
value = 5.0
rounded = true
tick_count = 5
ticks_on_borders = true

[node name="SliderLabel" type="Label" parent="CanvasLayer/UIContainer/IndiciesContainer/IndiciesSliderContainer"]
margin_left = 204.0
margin_top = 13.0
margin_right = 220.0
margin_bottom = 27.0
text = "00"
align = 1

[node name="SortSelect" type="OptionButton" parent="CanvasLayer/UIContainer"]
margin_top = 70.0
margin_right = 232.0
margin_bottom = 90.0
hint_tooltip = "Select which sorting algorithm is to be used while sorting the array"
text = "Select Sorting Algorithm"

[node name="SpeedContainer" type="VBoxContainer" parent="CanvasLayer/UIContainer"]
margin_top = 94.0
margin_right = 232.0
margin_bottom = 160.0
alignment = 1

[node name="SortSpeed" type="Label" parent="CanvasLayer/UIContainer/SpeedContainer"]
margin_right = 232.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Sorting Speed"
align = 1

[node name="SpeedSliderContainer" type="HBoxContainer" parent="CanvasLayer/UIContainer/SpeedContainer"]
margin_top = 26.0
margin_right = 232.0
margin_bottom = 66.0

[node name="SpeedSlider" type="HSlider" parent="CanvasLayer/UIContainer/SpeedContainer/SpeedSliderContainer"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
hint_tooltip = "Set the speed at which your array will be sorted
"
min_value = 0.125
max_value = 10.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="SpeedLabel" type="Label" parent="CanvasLayer/UIContainer/SpeedContainer/SpeedSliderContainer"]
margin_left = 204.0
margin_top = 13.0
margin_right = 232.0
margin_bottom = 27.0
text = "0.25"

[node name="RandomizeButton" type="Button" parent="CanvasLayer/UIContainer"]
margin_top = 164.0
margin_right = 232.0
margin_bottom = 184.0
hint_tooltip = "Randomize all values in array
(Picks a random number between 0 and 100, nonrepeating)"
text = "Randomize"

[node name="SortButton" type="Button" parent="CanvasLayer/UIContainer"]
margin_top = 188.0
margin_right = 232.0
margin_bottom = 208.0
hint_tooltip = "Begin sorting array"
text = "Sort"

[node name="StopButton" type="Button" parent="CanvasLayer/UIContainer"]
margin_top = 212.0
margin_right = 232.0
margin_bottom = 232.0
hint_tooltip = "Stop sorting array"
text = "Stop"

[node name="RightContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -83.0
margin_bottom = 40.0
grow_horizontal = 0
alignment = 1

[node name="TimerBox" type="HBoxContainer" parent="CanvasLayer/RightContainer"]
margin_top = 4.0
margin_right = 135.0
margin_bottom = 18.0
grow_horizontal = 0
alignment = 1

[node name="Time" type="Label" parent="CanvasLayer/RightContainer/TimerBox"]
margin_left = 26.0
margin_right = 62.0
margin_bottom = 14.0
text = "Time:"

[node name="TimeSecs" type="Label" parent="CanvasLayer/RightContainer/TimerBox"]
margin_left = 66.0
margin_right = 109.0
margin_bottom = 14.0
text = "00:00s"

[node name="TempBox" type="HBoxContainer" parent="CanvasLayer/RightContainer"]
margin_top = 22.0
margin_right = 135.0
margin_bottom = 36.0
grow_horizontal = 0
alignment = 1

[node name="Temp" type="Label" parent="CanvasLayer/RightContainer/TempBox"]
margin_right = 123.0
margin_bottom = 14.0
text = "Temp value stored:"

[node name="TempVal" type="Label" parent="CanvasLayer/RightContainer/TempBox"]
margin_left = 127.0
margin_right = 135.0
margin_bottom = 14.0
text = "0"

[node name="HBox" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
grow_horizontal = 2
custom_constants/separation = 20
alignment = 1

[node name="ArrayInstances" type="Node" parent="."]

[connection signal="value_changed" from="CanvasLayer/UIContainer/IndiciesContainer/IndiciesSliderContainer/IndexSlider" to="." method="_on_IndexSlider_value_changed"]
[connection signal="item_selected" from="CanvasLayer/UIContainer/SortSelect" to="." method="_on_SortSelect_item_selected"]
[connection signal="value_changed" from="CanvasLayer/UIContainer/SpeedContainer/SpeedSliderContainer/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/UIContainer/RandomizeButton" to="." method="_on_RandomizeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UIContainer/SortButton" to="." method="_on_SortButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UIContainer/StopButton" to="." method="_on_StopButton_pressed"]
